--- a/activities.html
+++ b/activities.html
@@ -11,9 +11,9 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar-top">
-    <div class="navbar-top-brand"><a href="home.html">Taniti 🌋</a></div>
+    <div class="navbar-top-brand"><a href="index.html">Taniti 🌋</a></div>
     <ul class="navbar-top-links">
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="food.html">Food</a></li>
       <li><a href="lodging.html">Lodging</a></li>
       <li><a href="activities.html"><span class="current-page">Activities</span></a></li>
@@ -218,13 +218,13 @@
   <footer class="footer">
     <div class="footer-content">
       <div>
-        <div class="navbar-bottom-brand"><a href="home.html">Taniti™</a></div>
+        <div class="navbar-bottom-brand"><a href="index.html">Taniti™</a></div>
       </div>
       <div class="resources-footer">
         <div>
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="food.html">Food</a></li>
             <li><a href="lodging.html">Lodging</a></li>
             <li><a href="activities.html">Activities</a></li>
