--- a/lodging.html
+++ b/lodging.html
@@ -10,9 +10,9 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar-top">
-    <div class="navbar-top-brand"><a href="home.html">Taniti 🌋</a></div>
+    <div class="navbar-top-brand"><a href="index.html">Taniti 🌋</a></div>
     <ul class="navbar-top-links">
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="food.html">Food</a></li>
         <li><a href="lodging.html"><span class="current-page">Lodging</span></a></li>
         <li><a href="activities.html">Activities</a></li>
@@ -71,13 +71,13 @@
   <footer class="footer">
     <div class="footer-content">
       <div>
-        <div class="navbar-bottom-brand"><a href="home.html">Taniti™</a></div>
+        <div class="navbar-bottom-brand"><a href="index.html">Taniti™</a></div>
       </div>
       <div class="resources-footer">
         <div>
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="food.html">Food</a></li>
             <li><a href="lodging.html">Lodging</a></li>
             <li><a href="activities.html">Activities</a></li>
