--- a/activities.html
+++ b/activities.html
@@ -21,7 +21,7 @@
     </ul>
   </nav>
 
-  <main>
+  <main class="actv-center">
     <section class="activities-summary">
       <h1>Things to do in Taniti 🔎</h1>
       <p>
@@ -191,7 +191,7 @@
           </div>
           <!-- Bootstrap code ends here -->          
     </section>
-    <section class="activities-section">
+    <section class="activities-list">
       <h2>Activity list</h2>
       <ul>
         <li><strong>Taniti City Tour</strong> – Explore native architecture, markets, and cuisine on a guided city tour.</li>
